- changed up the HTML to reflect a real module in the wild. AST 1002 m3 - formatted cel row style for readability purposes. - got yellow flash re-integrated, and tested. - deleted everythong out of custom JS file as it related to the previous HTML that was changed up. - NEXt STEPS fix the margins at mobile widths. - Yellow flash is treating figures as priority. Time to make that go away since it addresses a situation that no longer exists.

--- a/css/chunk-col-layoutHelpers.scss
+++ b/css/chunk-col-layoutHelpers.scss
@@ -1,4 +1,9 @@
-.cel-row {float: left;width: 99%;margin: 0 0 1.9rem 0;padding: 0;}
+.cel-row {
+    float: left;
+    width: 100%;
+    margin: 0 0 1.9rem 0;
+    padding: 0;
+}
 
 .cel-divider {float: left;width: 100%;height: .125em;}
 
