--- a/css/flex-main.scss
+++ b/css/flex-main.scss
@@ -62,6 +62,7 @@
 @import "state-is-citation";
 @import "state-is-caption";
 @import "state-is-modal";
+@import "m-yellow-flash";
 
 //pulling this because I need these styles in the main area to tweak with.
 //@import "chunk-flex-TOC";
@@ -100,15 +101,17 @@ html {
 
 
 #module-heading {
-  width: 98%;
+  width: 101%;
   align-items: center;
   padding-bottom: 1rem;
+  margin-left: -.5em;
   background-color: $darkPrimaryColor !important;
 }
 
 @media only screen and (max-width: 35em) {
   #module-heading {
-    width: 100%;
+    width: 101%;
+
   }
 }
 
@@ -263,13 +266,35 @@ html {
     width: 100%;
   }
 }
+body{
+  max-width: 1024px;
+  background-color: $lightPrimaryColor;
+  padding: 0;
+  margin: 0;
+}
+
+@media only screen and (min-width: 35em){
+  body{
+    margin-left: auto;
+    margin-right: auto;
+    background-color: $shadowColor;
+
+  }
+}
+#content-row{
+  background-color: $lightPrimaryColor;
+}
 
 #toc-column {
   float: left;
   min-height: 100vw;
   transition: all .25s ease;
 }
-
+@media only screen and (min-width: 35em){
+  #toc-column{
+    padding-left: .5em;
+  }
+}
 #toc-menu {
   padding-top: .5rem;
 }
@@ -391,7 +416,7 @@ html {
   /* clearing the box that I should have */
   @include material-shadow(0, .25em, .25em);
   background-color: $white;
-  padding-left: .25rem;
+  padding-left: 1rem;
 }
 
 .slideContent:before,
